# SlamPy

./: .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  GabHoo_settings.yaml  PROVA.txt  README.md  eval_orb_kitty.sh  eval_orb_tum.sh  eval_orb_tum_vi.sh  kitti_odometry.py  pyproject.toml  read_depth.py  requirements.txt  run.py  run2.py  run_GabHoo.py  run_MONO_IMU.py  settings.yaml  settings_EuRoC.yaml  settings_TUM_VI.yaml  slampy.py  trajectory_drawer.py  trajectory_example.ipynb  usage_example.ipynb  utils.py
docs/: requirements.txt
docs/source/: algorithm.rst  conf.py  config.rst  docker.rst  index.rst  installation.rst  introduction.rst  kitti_odometry.rst  modules.rst  run.rst  slampy.rst  trajectory_drawer.rst
slam_method/: OrbSlam2.py  OrbSlam3.py
slam_method/Settings/: EuRoC_ViconRoom2.yaml  GabHoo_camera_settings.yaml  OrbSlam2_KITTI_02.yaml  OrbSlam2_TUM_freiburg3_.yaml  OrbSlam3_KITTI_02.yaml  OrbSlam3_TUM_freiburg3.yaml  P20_camera_settings.yaml
