[tool.poetry]
name = "SlamPy"
version = "0.1.0"
description = "Python wrapper to SLAM algorithms"
authors = ["Giordano Laminetti <giordano.lamin@studio.unibo.it>, Filippo Aleotti <filippo.aleotti2@unibo.it>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.53.0"
Sphinx = "^3.3.1"
nbsphinx = "0.8.0"
sphinx-rtd-theme = "^0.5.0"
pytest = "^6.1.2"
pytest-black = "^0.3.12"
sphinxcontrib-bibtex = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
