[tool.poetry]
name = "SlamPy"
version = "0.1.0"
description = "Python wrapper to SLAM algorithms"
authors = ["Giordano Laminetti <giordano.lamin@studio.unibo.it>, Filippo Aleotti <filippo.aleotti2@unibo.it>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.53.0"
Sphinx = "^3.3.1"
nbsphinx = "0.8.0"
sphinx-rtd-theme = "^0.5.0"
pytest = "^6.1.2"
pytest-black = "^0.3.12"
sphinxcontrib-bibtex = "^1.0.0"
numpy = "^1.20.2"
PyOpenGL = "^3.1.5"
Pillow = "^8.0.1"
pybind11 = "^2.6.1"
jupyter = "^1.0.0"
matplotlib = "^3.3.3"
pandas = "^1.1.4"
PyYAML = "^5.3.1"
plotly = "^4.13.0"
opencv-contrib-python = "3.4.11.45"
notebook = "^6.1.5"
lesscpy = "^0.14.0"
jupyterthemes = "^0.20.0"
ipywidgets = "^7.5.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
